<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Light_gray"
        android:orientation="vertical"
        tools:context=".view.formcadastro.FormCadastro">

        <ImageView
            android:layout_width="100dp"
            android:layout_marginTop="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_registration"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/titulo_form_cadastro"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/arredondamento_edittext"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="15dp" />

        <EditText
            android:id="@+id/edit_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/arredondamento_edittext"
            android:hint="@string/hint_senha"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:padding="15dp" />

        <Button
            android:id="@+id/bt_cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/black"
            android:padding="15dp"
            android:text="@string/text_botao_cadastrar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_tela_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/text_tela_login"
            android:textColor="@color/black"
            android:textSize="16sp"
            />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>